Fix alignment of username some more

--- a/common/common.scss
+++ b/common/common.scss
@@ -7758,6 +7758,7 @@ section.post-menu-area {
   display: flex;
   min-height: 52px;
   margin-top: -5px;
+  padding: 0 1em 0.25em 1em;
 }
 .topic-meta-data .post-info {
   margin-right: 0;
